--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "theinvig",
+  "name": "The Invigilator",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,11 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.4.4",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
-    "next": "13.4.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@emotion/react": "^11.4.1",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@monaco-editor/react": "^4.3.1",
+    "@mui/icons-material": "^5.0.3",
+    "@mui/material": "^5.0.3",
+    "firebase": "^9.1.2",
+    "formik": "^2.2.9",
+    "next": "^11.1.4",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-firebase-hooks": "^3.0.4",
+    "react-highlight.js": "^1.0.0",
+    "react-lottie": "^1.2.3",
+    "react-router-dom": "^6.11.1",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.2"
   }
 }
